# ComfyUI_Aniportrait

./: Aniportrait_pose2video.json  README.md  __init__.py  audio2video_workflow.json  nodes.py  pyproject.toml  requirements.txt
assets/: audio2video_workflow.json  face_reenacment_workflow.json  pose2video_workflow.json
configs/inference/: inference_audio.yaml
configs/prompts/: animation.yaml  animation_audio.yaml  animation_facereenac.yaml
src/: __init__.py
src/audio_models/: model.py  pose_model.py
src/pipelines/: pipeline_pose2vid_long.py
src/utils/: face_landmark.py  frame_interpolation.py  logger.py  mp_utils.py  pose_util.py  util.py
